[package]
name = "jackrabbit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
clap = { version = "3.1.17", features = ["derive"] }
rouille = "3.5.0"
serde = "1.0.137"
serde_derive = "1.0.137"
toml = "0.5.9"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
